# backend/routes/api.php
@@ -1,3 +1,5 @@
 <?php
 use Illuminate\Support\Facades\Route;
+use App\Http\Controllers\ServiceSelector\ServiceController;
+Route::get('/departments/{department_id}/services', [ServiceController::class, 'index']);
 
